<resources>
    <string name="app_name">2doc</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="logo">2doc</string>
    <string name="phone">+375 29 119 10 88</string>
    <string name="phone_call">+375291191088</string>

    /*search_screen*/
    <string name="search_screen_label">Нужен хороший врач?</string>
    <string name="search_screen_btn_search">Выбор специалиста</string>
    <string name="search_screen_label_phone">
        Мы ответим на все вопросы
    </string>

    /*timetable*/
    <string name="timetable_not_get">Нет приёмов</string>

    /*profile*/
    <string name="profile_record_label">Записаться на приём</string>
    <string name="profile_about">Информация</string>
    <string-array name="profile_day">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    /*record_time*/
    <string name="record_time_start">Начало в:</string>
    <string name="record_time_stop">Конец в:</string>

    /*your_information*/
    <string name="your_information_contacts">Контактные данные: </string>
    <string name="your_information_hint_fio">ФИО </string>
    <string name="your_information_hint_phone">Контактный телефон </string>
    <string name="your_information_hint_email">Эл. почта (по желанию) </string>
    <string name="your_information_btn_record">Записаться на приём </string>


    /*cities_screen*/
    <string-array name="cities_screen_cities">
        <item>Минск</item>
        <item>Борисов</item>
        <item>Жодино</item>
        <item>Орша</item>
    </string-array>

    /*menu*/
    <string name="view_change_list">Список</string>
    <string name="view_change_map">Карта</string>

    <string name="menu_filter">Фильтр</string>
    <string name="menu_sort">Сортировка</string>

    <string-array name="menu_sort_items">
        <item>По умолчанию</item>
        <item>По возрастанию цены</item>
        <item>По убыванию цены</item>
        <item>По опыту</item>
    </string-array>


    /*footer*/
    <string name="footer_label"> О проекте</string>
    <string name="footer_information">
        Основная цель сервиса - упростить
        процесс записи пациентам на приём к
        выбранному специалисту и сделать работу
        врачей и клиник более прозрачной для
        Основная цель сервиса - упростить процесс записи пациентам на приём к
        выбранному специалисту и сделать работу врачей и клиник более прозрачной для
        потребителей.
    </string>
    <string name="footer_about">
        Бастрый сервис по поиску врачей\n
        © 2017, 2doc.by
    </string>

    /*global_instruction*/
    <string name="global_instruction_label_one">Выбираете врача</string>
    <string name="global_instruction_information_one">
        Сравнивайте и выбирайте врача исходя из его опыта, рейтинга и местоположения
    </string>

    <string name="global_instruction_label_two">Запишитесь на приём</string>
    <string name="global_instruction_information_two">
        Выбирайте удобный для вас день и время, специалист медцентра
        свяжется с вами.
    </string>

    <string name="global_instruction_label_three">Посетите медцентр</string>
    <string name="global_instruction_information_three">
        Приходите в назначенное время в медицинский центр и
        получайте нужную услугу.
    </string>

    /*advantages*/
    <string name="advantages_label_timetable">Запись на удобное для вас время</string>
    <string name="advantages_information_timetable">
        На сайте только актуальное расписание врачей, что позволяет
        нам избежать любых накладок.
    </string>

    <string name="advantages_label_review">Настоящие отзывы</string>
    <string name="advantages_information_review">
        Все отзывы проверяются телефонным разговором
        с пациентом.
    </string>

    <string name="advantages_label_free">Бесплатно</string>
    <string name="advantages_information_free">
        Сервис 2doc является абсолютно бесплатным
        для все пациентов.
    </string>

    /*main_screen*/
    <string name="main_screen_label">Нужен хороший врач?</string>
    <string name="main_screen_information">
        Ищите и записывайтесь здесь, на удобное для
        вас время.
    </string>
    <string name="main_screen_label_phone">
        Мы ответим на все вопросы
    </string>
    <string name="main_screen_phone">
        +375 29 119 10 88
    </string>

    /*menu*/
    <string name="menu_main">
        Главная
    </string>
    <string name="menu_about">
        О проекте
    </string>
    <string name="menu_info">
        Медцентрам
    </string>

    /*fragment_about*/
    <string name="fragment_about_block1_label">
        Врачи страны на одном портале!
    </string>
    <string name="fragment_about_block1_info">
        2doc.by - это простой, понятный и удобный сервис поиска
        врача и записи на прием без звонка в медицинский центр.
    </string>

    <string name="fragment_about_block2_label">
        Простое решение сложной задачи
    </string>
    <string name="fragment_about_block2_info">
        Если вам хоть раз приходилось доверять свое здоровье и здоровье
        ваших близких врачу (по сути, незнакомому человеку) — этот проект будет полезен!\n\n

        С 2doc.by вы получите возможность записаться к врачу за пару кликов на
        сайте, без звонков, очередей, утомительного поиска.\n\n

        Выбирайте врача, основываясь на его компетенциях и отзывах пациентов:
        с помощью 2doc.by вы сможете самостоятельно сделать вывод о
        профессионализме специалиста еще до приема.\n\n

        Быстро! Надежно! Конфиденциально!
    </string>

    <string name="fragment_about_block3_label">
        Как это работает?
    </string>
    <string name="fragment_about_block3_info1">
        Выберите врача необходимой вам специализации.Для того, чтобы вам было проще
        принять решение, профиль каждого специалиста содержит подробную информацию
        о его ключевых компетенциях и отзывы пациентов.
    </string>
    <string name="fragment_about_block3_info2">
        Подберите удобное время приема из доступных промежутков в профиле врача.Оставьте
        свои контактные данные и медицинский центр, где работает специалист,
        перезвонит вам сам и подтвердит запись.
    </string>

    <string name="fragment_about_block4_info">
        Проект 2doc не требует от вас оплаты за услугу записи.
    </string>

    /*fragment_for_medcenter*/
    <string name="fragment_for_medcenter_label">
        2Doc.by – инновационный инструмент для привлечения клиентов и повышения их
        лояльности, а так же для оптимизации внутренних бизнес-процессов через IT–решения.
    </string>
    <string name="fragment_for_medcenter_info1">
        Стандартное решение сервиса 2Doc позволяет медицинскому центру разместить
        информацию о своих сотрудниках, снабдив её максимально подробными и нужными
        клиентам фактами об опыте и квалификации врача, и получать запросы на приём
        от клиентов прямо из системы 2Doc.\n\n

        Данное решение создаёт дополнительный канал привлечения клиентов и
        снижает нагрузку на колл-центр.
    </string>
    <string name="fragment_for_medcenter_info2">
        Отсутствие риска! Мы не берем плату с медицинских центров за создание профилей
        врачей и размещение в них информации на протяжении всего срока сотрудничества.
    </string>
    <string name="fragment_for_medcenter_info3">
        Также 2Doc предлагает комплексное решение – CRM-систему «Регистратура online».\n
        Система интегрирована с сервисом 2Doc для автоматизации основных процессов обслуживания
        клиентов в медицинском центре. Система охватывает такие направления, как:
    </string>
    <string name="fragment_for_medcenter_info4">
        Привлечение и удержание клиентов\n
        Управление расписанием приёма врачей и запись на приём\n
        Снижение объёмов «бумажной» работы\n
        Аналитика\n
        Финансовый и управленческий учёт
    </string>
    <string name="fragment_for_medcenter_info5">
        Разработчик осуществляет постоянную комплексную техническую поддержку системы.
        Это означает, что партнеры проекта могут существенно снизить
        затраты на IT – решения и автоматизацию процессов.
    </string>

    <string name="filter_activity_label">
        Filter
    </string>

    <string name="filterCheckBox1">Для детей</string>
    <string name="filterCheckBox2">Рядом с метро</string>
    <string name="filterApplyButton">Подобрать</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    >>>>>>> master
</resources>
