<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_main"
            android:checked="true"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_formedcenter"
            android:icon="@drawable/ic_local_hospital_black_24dp"
            android:title="@string/menu_info" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_call"
                android:icon="@android:drawable/stat_sys_phone_call"
                android:title="@string/main_screen_phone" />

        </menu>
    </item>

</menu>
