<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_material_light_1"
    tools:context="by.lovata.a2doc.screenStart.screenAbout.TabAboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="30sp"
                android:paddingTop="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/fragment_about_block1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="20sp"
                android:paddingTop="20sp"
                android:text="@string/fragment_about_block1_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="30sp"
                android:paddingTop="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/fragment_about_block2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="20sp"
                android:paddingTop="20sp"
                android:text="@string/fragment_about_block2_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textSize="30sp"
                android:paddingTop="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/fragment_about_block3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:paddingTop="20sp"
                    android:text="@string/fragment_about_block3_info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="20sp"
                    android:paddingTop="20sp"
                    android:text="@string/fragment_about_block3_info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:textSize="20sp"
                android:paddingTop="20sp"
                android:text="@string/fragment_about_block4_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
