<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="by.lovata.a2doc.screenRecordDoctor.screenYourInformation.YourInformationFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/doctor_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/doctor_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/doctor_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/doctor_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/your_information_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/your_information_hint_fio"
            android:id="@+id/edit_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/your_information_hint_phone"
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/your_information_hint_email"
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/your_information_btn_record"
            android:id="@+id/record_send_to_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
