<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <Spinner
        android:id="@+id/services_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/spinner_style">

    </Spinner>

    <CheckBox
        android:id="@+id/filterCheckBox1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:checked="false"
        android:text="@string/filterCheckBox1" />

    <CheckBox
        android:id="@+id/filterCheckBox2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:checked="false"
        android:text="@string/filterCheckBox2" />

    <Button
        android:id="@+id/filterApplyButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_selector"
        android:text="@string/filterApplyButton"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
